--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ psycopg2 = "^2.9.3"
 pytest = "^7.1.3"
 coverage = "^6.4.4"
 pytest-cov = "^3.0.0"
-pytest_async = "^0.1.1"
+httpx = "^0.23.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.5.0"
