Add readme file

--- a/containers/Dockerfile
+++ b/containers/Dockerfile
@@ -1,19 +1,23 @@
 FROM python:3.10-bullseye AS builder
 
-COPY ./requirements/ /requirements/
+ARG REQUIREMENTS=dev.txt
+ENV REQUIREMENTS=$REQUIREMENTS
 
-ARG ENVIRONMENT=dev
+COPY ./requirements/$REQUIREMENTS /requirements/$REQUIREMENTS
 
 RUN apt-get update \
     && apt-get --yes upgrade \
     && apt-get --yes install --no-install-recommends libpq-dev \
     && python -m pip install --no-cache-dir --upgrade pip setuptools wheel \
-    && python -m pip wheel --requirement /requirements/${ENVIRONMENT}.txt --wheel-dir /wheels
+    && python -m pip wheel --requirement /requirements/$REQUIREMENTS --wheel-dir /wheels
 
 
 FROM python:3.10-slim-bullseye AS final
 
 WORKDIR /app
+
+ARG ENVIRONMENT=dev
+ENV ENVIRONMENT=$ENVIRONMENT
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
@@ -25,8 +29,8 @@ RUN apt-get update \
     && apt-get --yes install --no-install-recommends libpq5 wait-for-it \
     && python -m pip install --no-cache-dir --upgrade pip setuptools wheel debugpy \
     && python -m pip install --no-cache-dir /wheels/* \
-    && apt-get --yes clean \
-    && apt-get --yes autoclean \
     && apt-get --yes autoremove \
+    && apt-get --yes autoclean \
+    && apt-get --yes clean \
     && rm -rf ./wheels \
     && rm -rf /var/lib/apt/lists/*
