--- a/containers/Dockerfile.production
+++ b/containers/Dockerfile.production
@@ -30,6 +30,6 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* \
     && chown -R www-data:www-data /app
 
-COPY --chown=www-data:www-data ./migrations/ ./rates/ /app/
+COPY --chown=www-data:www-data ./rates/ /app/rates/
 
 CMD ["uvicorn", "--host", "0.0.0.0", "--port", "8000", "rates.main:app"]
